.k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: book-management-backend
  template:
    metadata:
      labels:
        app: book-management-backend
    spec:
      containers:
      - name: book-management-backend
        image: rafaelmiers/book-manager-backend:latest
        ports:
        - containerPort: 8000
