.k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: book-manager-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    http:
      paths:
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: book-manager-service
              port:
                number: 8000
